; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-pnx.c_i2c_pnx_controller_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-pnx.c_i2c_pnx_controller_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.i2c_pnx_data = type { i32 (%struct.platform_device*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*, i32)* @i2c_pnx_controller_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_pnx_controller_suspend(%struct.platform_device* %0, i32 %1) #0 {
  %3 = alloca %struct.platform_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.i2c_pnx_data*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.platform_device*, %struct.platform_device** %3, align 8
  %7 = call %struct.i2c_pnx_data* @platform_get_drvdata(%struct.platform_device* %6)
  store %struct.i2c_pnx_data* %7, %struct.i2c_pnx_data** %5, align 8
  %8 = load %struct.i2c_pnx_data*, %struct.i2c_pnx_data** %5, align 8
  %9 = getelementptr inbounds %struct.i2c_pnx_data, %struct.i2c_pnx_data* %8, i32 0, i32 0
  %10 = load i32 (%struct.platform_device*, i32)*, i32 (%struct.platform_device*, i32)** %9, align 8
  %11 = load %struct.platform_device*, %struct.platform_device** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 %10(%struct.platform_device* %11, i32 %12)
  ret i32 %13
}

declare dso_local %struct.i2c_pnx_data* @platform_get_drvdata(%struct.platform_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
